# 01-testnet

./: .gitignore
synergy-contracts/: certik_smart_contract_checklist.md  synergy_coin_metaplex.json
synergy-contracts/ethereum-snrg/: .env  Presale.sol  Staking.sol  Swap.sol  deployTx.json  deployment.json  hardhat.config.js  package-lock.json  (+1 more)
synergy-snrg/: README.md
synergy-testnet/: Cargo.toml  README.md  package-lock.json  package.json
synergy-testnet-explorer/: README.md
synergy-testnet/SynQ/: SynQ_project_tree.txt  synq-file-tree.md
synergy-testnet/SynQ/docs/: SynQ-VM-Specification.md
synergy-testnet/SynQ/specs/: checklist.md  synq.dsl
synergy-testnet/config/: genesis.json
synergy-testnet/docs/: README.md  aivm-guide.md  api-reference.md  config-guide.md  token-system.md  troubleshooting.md  validator-guide.md
synergy-testnet/scripts/: setup-gpt-oss.sh  start-testnet.sh
synergy-testnet/src/: Cargo.toml  broadcast.rs  lib.rs  logging.rs  main.rs  token_new.rs  token_old.rs  transaction.rs  validator.rs  wallet.rs
synergy-testnet/src/aivm/: interoperability.rs  mod.rs  provider.rs  runtime.rs
synergy-testnet/src/config/: mod.rs
synergy-testnet/src/consensus/: consensus_algorithm.rs
synergy-testnet/src/crypto/: pqc.rs
synergy-testnet/src/p2p/: mod.rs  networking.rs
synergy-testnet/src/rpc/: mod.rs  rpc_server.rs
synergy-testnet/src/synq/: mod.rs
synergy-validator-control-panel/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
synergy-wallet/: package-lock.json  package.json  walletWizard.jsx
(+93 files in other folders)
